# OBDLink-BLE

./: .gitignore  README.md  obd-reader.py  randomdata.py
OBD-dashboard/frontend/: index.html  style.css
esp32/obd_ble_bridge/: CMakeLists.txt  output.txt  partitions.csv  sdkconfig
esp32/obd_ble_bridge/main/: CMakeLists.txt  ble_server.c  error_snapshot.c  error_snapshot.h  main.c  obd_ble_bridge.c
